# smcat

./: .gitignore  README.md  pyproject.toml  scrapy.cfg
.github/workflows/: pytest.yaml
smcat/: __init__.py  __main__.py  common.py  items.py  middlewares.py  pipelines.py  settings.py  sitemap.py
smcat/models/: __init__.py  sitemap.py
smcat/spiders/: jsonldspider.py  ldsitemap.py
tests/: test_common.py  test_crawl.py  test_introspection.py  testserver.py
tests/data/: index.html  robots.txt  sm01.xml  sm02.xml
tests/data/content/: common.js  ds01.html  ds01.jsonld  ds02.html  ds03.html  show_jsonld.js  test.html
