[tool.poetry]
name = "smcat"
version = "0.2.0"
description = "Sitemap cat for catting sitemaps."
authors = ["datadavev <605409+datadavev@users.noreply.github.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.27.1"
SQLAlchemy = "^1.4.31"
click = "^8.0.3"
lxml = "^4.7.1"
python-dateutil = "^2.8.2"
sqlmodel = "^0.0.6"

[tool.poetry.dev-dependencies]
pytest = "^7.0.0"
coverage = "^6.3.1"

[tool.poetry.scripts]
smcat = "smcat.__main__:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
